@@ -9,11 +9,13 @@ Extended features:
 
 o -thinlines can ensure maximum as well as minimum thickness
 o New -decompress-just-content for easier content stream debugging
+o -squeeze processes xobjects inside xobjects
 
 Fixes:
 
 * Sanitizes inputs to prevent command injection attacks
 o Fix PMAXX et al. w.r.t -add-rectangle
+o Allow Float/Int to appear anywhere in CPDFJSON / bookmark JSON
 
 * = Supported by a grant from NLnet
 
